# dbt-switch

./: README.md  dbt_cloud.yml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci_cd.yml
docs/: how_to_use.md
src/dbt_switch/: main.py
src/dbt_switch/cli/: parser.py
src/dbt_switch/config/: cloud_handler.py  file_handler.py  input_handler.py
src/dbt_switch/utils/: __init__.py  config_handler.py  initialize_config.py  input_handler.py  logger.py
src/dbt_switch/validation/: helpers.py  schemas.py
tests/: conftest.py  test_switch.py
tests/e2e/: test_cli_commands.py
tests/fixtures/: mock_data.py
tests/fixtures/sample_configs/: complex_config.yml  invalid_config.yml  malformed_config.yml  valid_config.yml
tests/integration/: test_cli_parser.py  test_config_workflow.py
tests/unit/: test_dbt_cloud_handler.py  test_file_handler.py  test_input_handler.py  test_list_command.py  test_update_interactive.py  test_validation.py  test_validation_helpers.py
