[project]
name = "dbt-switch"
version = "0.1.22"
description = "A simple CLI to switch between dbt Cloud projects and hosts."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.10.6",
    "rich",
]

[project.scripts]
dbt-switch = "dbt_switch.main:main"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.12.11",
]

[tool.setuptools]
package-dir = {"" = "src"}
